Commented main && dropped display file

--- a/C/Makefile
+++ b/C/Makefile
@@ -1,5 +1,4 @@
 MAIN = project_01_main
-DISPLAY = project_01_display_messages
 INPUT = project_01_get_input
 IO = project_01_iofunctions
 DBINTERACTION = project_01_database
@@ -8,14 +7,11 @@ COMPILERFLAGS = -c
 
 all: $(MAIN)
 
-$(MAIN): $(DISPLAY).o $(INPUT).o $(IO).o $(DBINTERACTION).o $(MAIN).o
-	$(COMPILER) $(DISPLAY).o $(INPUT).o $(IO).o $(DBINTERACTION).o $(MAIN).o -o project_01
+$(MAIN): $(INPUT).o $(IO).o $(DBINTERACTION).o $(MAIN).o
+	$(COMPILER) $(INPUT).o $(IO).o $(DBINTERACTION).o $(MAIN).o -o c_address_book
 
 $(MAIN).o: $(MAIN).c record.h
 	$(COMPILER) $(COMPILERFLAGS) $(MAIN).c
-
-$(DISPLAY).o: $(DISPLAY).c
-	$(COMPILER) $(COMPILERFLAGS) $(DISPLAY).c
 
 $(INPUT).o: $(INPUT).c
 	$(COMPILER) $(COMPILERFLAGS) $(INPUT).c
@@ -27,4 +23,4 @@ $(DBINTERACTION).o: $(DBINTERACTION).c record.h
 	$(COMPILER) $(COMPILERFLAGS) $(DBINTERACTION).c
 
 clean:
-	rm -f *.o project
+	rm -f *.o c_address_book
