Finished cleaning up C files && updated README for it

--- a/C/Makefile
+++ b/C/Makefile
@@ -1,14 +1,14 @@
 MAIN = address_book_main
 INPUT = address_book_input
 IO = address_book_io_functions
-DBINTERACTION = project_01_database
+LLFUNCTIONS = address_book_linked_list_functions
 COMPILER = gcc
 COMPILERFLAGS = -c
 
 all: $(MAIN)
 
-$(MAIN): $(INPUT).o $(IO).o $(DBINTERACTION).o $(MAIN).o
-	$(COMPILER) $(INPUT).o $(IO).o $(DBINTERACTION).o $(MAIN).o -o c_address_book
+$(MAIN): $(INPUT).o $(IO).o $(LLFUNCTIONS).o $(MAIN).o
+	$(COMPILER) $(INPUT).o $(IO).o $(LLFUNCTIONS).o $(MAIN).o -o c_address_book
 
 $(MAIN).o: $(MAIN).c record.h
 	$(COMPILER) $(COMPILERFLAGS) $(MAIN).c
@@ -19,8 +19,8 @@ $(INPUT).o: $(INPUT).c
 $(IO).o: $(IO).c record.h
 	$(COMPILER) $(COMPILERFLAGS) $(IO).c
 
-$(DBINTERACTION).o: $(DBINTERACTION).c record.h
-	$(COMPILER) $(COMPILERFLAGS) $(DBINTERACTION).c
+$(LLFUNCTIONS).o: $(LLFUNCTIONS).c record.h
+	$(COMPILER) $(COMPILERFLAGS) $(LLFUNCTIONS).c
 
 clean:
 	rm -f *.o c_address_book
